<resources>
    <string name="app_name">Table</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1301659863254249</string>
    <string name="CerrarSesion">Cerrar Sesion </string>
    <string name="registrateCon">Regístrate con:</string>
    <string name="balances_molares">Balances Molares</string>
    <string name="conversion_y_reactor">Conversión y Reactor</string>
    <string name="diseño_de_reactores">Diseño de Reactores</string>
    <string name="reacciones_multiples">Reacciones Multiples</string>
    <string name="herramientas">Herramientas</string>
    <string name="calculadoras">Calcular Propiedades</string>
    <string name="conversion_de_unidades">Conversion de unidades</string>
    <string name="stream">En vivo</string>
    <string name="forum">Blog</string>
    <string name="usuario">usuario@table.com</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingresar">Ingresar</string>
    <string name="dominio">\@table.com</string>
    <string name="registrarses">Registrarse !!!</string>
    <string name="usuarios">Usuario</string>
    <string name="comentario">Di algo bonito .......</string>
    <string name="titulocomentario">Titulo del comentario</string>
    <string name="comentar">Comentar !!!</string>
    <string name="post_title_goas_here">Post Title Goas Here</string>
    <string name="description_goas_here">Description Goas Here</string>
    <string name="confirmarPass">Confirmar Contraseña</string>
    <string name="contrasenaRegis">Contraseña numeros y letras</string>
    <string name="publico">publicó</string>


</resources>
