<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tesis.utadeo.table.RegisterActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/linearLayout">

        <EditText
            android:hint="@string/usuarios"
            android:id="@+id/userRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:inputType="textEmailAddress"
            android:background="@drawable/input_outline"
            android:padding="10dp"
            android:layout_weight="1.7" />

        <TextView
            android:text="@string/dominio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_weight="0.3"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:typeface="monospace"
            android:padding="10dp"/>
    </LinearLayout>


    <EditText
        android:hint="@string/contrasenaRegis"
        android:id="@+id/passRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:inputType="textPassword"
        android:background="@drawable/input_outline"
        android:padding="10dp"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:textColor="#FFFFFF"
        android:typeface="monospace"
        android:background="@drawable/buttonregister"
        android:text="@string/registrarses"
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/passRegister"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
