<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_publish"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tesis.utadeo.table.Publish">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/add_btn"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageSelect"
        android:background="#00ffffff"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:background="@drawable/input_outline"
        android:id="@+id/editTextTitle"
        android:layout_below="@+id/imageSelect"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:hint="@string/titulocomentario"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:background="@drawable/input_outline"
        android:id="@+id/descField"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:hint="@string/comentario"/>

    <Button
        android:textColor="#FFFFFF"
        android:typeface="monospace"
        android:background="@drawable/buttonregister"
        android:text="@string/comentar"
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"/>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
